# rustkew

./: Cargo.toml  README.md  rustfmt.toml
src/: core.rs  lib.rs
src/ipni/: filters.rs  mod.rs  suggest.rs  test.rs
src/ipni/terms/: author.rs  mod.rs  name.rs  publication.rs
src/powo/: filters.rs  mod.rs  test.rs
src/powo/terms/: characteristic.rs  geography.rs  mod.rs  name.rs
