[package]
name = "rustkew"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
surf = "2.3"

[dependencies.urn]
version = "0.4"
features = ["serde"]
