[package]
edition = "2024"
name = "rustkew"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros"] }
url = "2.5.4"
urn = { version = "0.7", features = ["serde"] }
